--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -236,5 +236,11 @@ ul {
 			line-height: 150%;
 			margin-bottom: 10px;
 		}
+
+		code {
+            padding: 0;
+			font-size: 1em;
+            text-decoration: underline;
+		}
 	}
 }
